fix(web): simplify horizontal resize spacing

--- a/web/src/css/app.scss
+++ b/web/src/css/app.scss
@@ -368,7 +368,6 @@ a {
   height: 100%;
   min-height: 0;
   align-items: stretch;
-  gap: 24px;
 }
 
 .overview-horizontal-empty {
